k8s-on-premise-cloud/manifest/movie-web-frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-web-frontend 
  namespace: movie-web
  labels:
    app: movie-web-frontend 
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: movie-web-frontend 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: movie-web-frontend 
    spec:
      containers:
        - name: movie-web-frontend 
          image: dev.nhatanhdevops.website/onlineshop/movie-web-frontend-production:v30_d0c1a18b
          ports:
            - containerPort: 80
              protocol: TCP  
              name: tcp
          resources:
            requests:
              memory: "256Mi"
      imagePullSecrets:
        - name: auth-registry
      dnsPolicy: ClusterFirst
      restartPolicy: Always
