k8s-on-premise-cloud/manifest/movie-web-frontend/cloudflare-frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: cloudflare-movie-web-frontend-service 
  namespace: movie-web
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  type: ClusterIP
  selector:
    app: cloudflare-movie-web-frontend 
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
