k8s-on-premise-cloud/manifest/movie-web-frontend/cloudflare-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-movie-web-frontend-ingress
  namespace: movie-web
spec:
  ingressClassName: nginx  
  rules:
    - host: movie-web-frontend.nfr-vn-ntt.cftenant.com
      http:
        paths:
          - path: /  
            pathType: Prefix  
            backend:
              service:
                name: cloudflare-movie-web-frontend-service
                port:
                  number: 80
