k8s-on-premise-cloud/manifest/movie-web-frontend/eks-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-web-eks-frontend-ingress
  namespace: movie-web
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/use-forwarded-for: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/preserve-host: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      Include /etc/nginx/modsecurity/modsecurity.conf
      Include /etc/nginx/owasp-modsecurity-crs/crs-setup.conf
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABCDEFGHIZ
      SecAuditLogType Serial
      SecDebugLogLevel 3 
    nginx.ingress.kubernetes.io/server-snippet: |
      error_page 403 = @403; 
      location @403 {
        default_type application/json;
        
        access_by_lua_block {
          local blocked_rule = os.getenv("blocked_rule_id") or "forbidden"
          ngx.header.content_type = "application/json"
          
          if blocked_rule == "100001" then
            ngx.say('{"status":403,"message":"Access denied: Vietnam and Australia region only","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "100004" then 
            ngx.say('{"status":429,"message":"Rate limiting exceeded","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "930100" then
            ngx.say('{"status":403,"message":"Path Traversal Attack detected","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "930121" then
            ngx.say('{"status":403,"message":"OS File Access Attempt in REQUEST_HEADERS detected","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "930120" then
            ngx.say('{"status":403,"message":"OS File Access Attempt detected","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "930130" then
            ngx.say('{"status":403,"message":"Restricted File Access Attempt","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921140" then 
            ngx.say('{"status":403,"message":"HTTP Header Injection Attack via headers","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921150" then 
            ngx.say('{"status":403,"message":"HTTP Header Injection Attack via payload (CR/LF detected)","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921160" then 
            ngx.say('{"status":403,"message":"HTTP Header Injection Attack via payload (CR/LF and header-name detected)","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921190" then
            ngx.say('{"status":403,"message":"HTTP Splitting (CR/LF in request detected)","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921200" then
            ngx.say('{"status":403,"message":"LDAP Injection Attack","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921422" then 
            ngx.say('{"status":400,"message":"Content-Type header: Dangerous content type outside the mime type declaration","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921210" then
            ngx.say('{"status":403,"message":"HTTP Parameter Pollution after detecting bogus char after parameter array","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "931100" then
            ngx.say('{"status":403,"message":"Possible Remote File Inclusion (RFI) Attack: URL Parameter using IP Address","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "931120" then
            ngx.say('{"status":403,"message":"Possible Remote File Inclusion (RFI) Attack: URL Payload Used w/Trailing Question Mark Character (?)","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "931130" then
            ngx.say('{"status":403,"message":"Possible Remote File Inclusion (RFI) Attack: Off-Domain Reference/Link","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "931131" then
            ngx.say('{"status":403,"message":"Possible Remote File Inclusion (RFI) Attack: Off-Domain Reference/Link","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "932120" then
            ngx.say('{"status":403,"message":"Remote Command Execution: Windows PowerShell Command Found","block_rule":"'..blocked_rule..'"}') 
          elseif blocked_rule == "932125" then
            ngx.say('{"status":403,"message":"Remote Command Execution: Windows PowerShell Alias Command Injection","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "932160" then
            ngx.say('{"status":403,"message":"Remote Command Execution: Unix Shell Code Found","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "932175" then
            ngx.say('{"status":403,"message":"Remote Command Execution: Unix shell alias invocation","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "932200" then
            ngx.say('{"status":403,"message":"RCE ByPass Technique","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "932205" then
            ngx.say('{"status":403,"message":"RCE ByPass Technique","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "932206" then
            ngx.say('{"status":403,"message":"RCE ByPass Technique","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "913100" then
            ngx.say('{"status":403,"message":"Found User-Agent associated with security scanner","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941110" then 
            ngx.say('{"status":403,"message":"XSS Filter - Category 1: Script Tag Vector","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941120" then
            ngx.say('{"status":403,"message":"XSS Filter - Category 2: Event Handle Vector","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941130" then 
             ngx.say('{"status":403,"message":"XSS Filter - Category 3: Attribute Vector","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941140" then 
            ngx.say('{"status":403,"message":"XSS Filter - Category 4: Javascript URI Vector","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941150" then
            ngx.say('{"status":403,"message":"XSS Filter - Category 5: Disallowed HTML Attributes","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941160" then
            ngx.say('{"status":403,"message":"NoScript XSS InjectionChecker: HTML Injection","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941170" then
            ngx.say('{"status":403,"message":"NoScript XSS InjectionChecker: Attribute Injection","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941180" then
            ngx.say('{"status":403,"message":"Node-Validator Deny List Keywords","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941220" then 
            ngx.say('{"status":403,"message":"IE XSS Filters - Atttack Detected","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941370" then
            ngx.say('{"status":403,"message":"JavaScript global variable found","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941390" then
            ngx.say('{"status":403,"message":"Javascript method detected","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941310" then
            ngx.say('{"status":403,"message":"US-ASCII Malformed Encoding XSS Filter - Attack Detected","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941400" then
            ngx.say('{"status":403,"message":"XSS JavaScript function without parentheses","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "941100" then
            ngx.say('{"status":403,"message":"XSS Attack Detected via libinjection","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "943100" then 
            ngx.say('{"status":403,"message":"Possible Session Fixation Attack: Setting Cookie Values in HTML","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "943110" then
            ngx.say('{"status":403,"message":"Possible Session Fixation Attack: SessionID Parameter Name with Off-Domain Referer","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "943120" then
            ngx.say('{"status":403,"message":"Possible Session Fixation Attack: SessionID Parameter Name with No Referer","block_rule":"'..blocked_rule..'"}')
          end
          return ngx.exit(ngx.HTTP_FORBIDDEN)
        }
      }
spec:
  ingressClassName: nginx
  rules:
    - host: eks-movie.nhatanhweb.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-web-frontend-service
                port:
                  number: 80
