k8s-on-premise-cloud/manifest/movie-web-frontend/simple-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-web-frontend-ingress
  namespace: movie-web
spec:
  ingressClassName: nginx
  rules:
    - host: web.nhatanhmovieweb.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-web-frontend-service
                port:
                  number: 80
