k8s-on-premise-cloud/manifest/movie-web-frontend/frontend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: movie-web
spec:
  podSelector:
    matchLabels:
      app: movie-web-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
